# Voxel-Game

./: CMakeLists.txt  main.cpp  main.h
src/: Main.cpp  Main.h  main.cpp
src/Application/: Application.cpp  Application.h
src/Camera/: Camera.cpp  Camera.h
src/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/Layers/: Layer.h  LayerStack.cpp  LayerStack.h
src/Layers/MainLayer/: Light.h  MainLayer.cpp  MainLayer.h  NoiseGenerator.cpp  Primitives.cpp  Primitives.h  Terrain.cpp
src/Layers/MainLayer/Components/: Chunk.cpp  Chunk.h  Light.cpp  Light.h  Terrain.cpp  Terrain.h
src/Layers/MainLayer/Noise/: Noise.h  NoiseGenerator.h
src/Renderer/EBO/: EBO.cpp  EBO.h
src/Renderer/Mesh/: Mesh.cpp  Mesh.h  RenderableMesh.cpp  RenderableMesh.h
src/Renderer/Renderer/: Renderer.cpp  Renderer.h
src/Renderer/Shader/: Shader.cpp  Shader.h
src/Renderer/Utils/: Lighting.cpp  Lighting.h  Vertex.h  Vertice.h
src/Renderer/VAO/: VAO.cpp  VAO.h
src/Renderer/VBO/: VBO.cpp  VBO.h
src/Shaders/: defaultFrag.shader  defaultVertex.shader  fragment.shader  lightFrag.shader  lightVertex.shader  vertex.shader
src/Window/: Window.cpp  Window.h
vendors/glad/: CMakeLists.txt
vendors/glad/include/glad/: glad.h
vendors/glad/src/: glad.c
vendors/glfw/: CMakeCache.txt
vendors/glm/glm/ext/: matrix_projection.hpp
